--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,22 @@
-version: '3.8'
+version: "3.8"
 
 services:
   stt:
-    build:
-      context: ./stt
-      dockerfile: Dockerfile
-    volumes:
-      - ./stt:/app
-    command: python main.py
+    build: ./stt
+    ports:
+      - "8001:8001"
 
   tts:
-    build:
-      context: ./tts
-      dockerfile: Dockerfile
-    volumes:
-      - ./tts:/app
-    command: python main.py
+    build: ./tts
+    ports:
+      - "8002:8002"
 
   cv-parser:
-    build:
-      context: ./cv-parser
-      dockerfile: Dockerfile
-    volumes:
-      - ./cv-parser:/app
-    command: python main.py
+    build: ./cv-parser
+    ports:
+      - "8003:8003"
 
   question-gen:
-    build:
-      context: ./question-gen
-      dockerfile: Dockerfile
-    volumes:
-      - ./question-gen:/app
-    command: python main.py
-
-networks:
-  default:
-    driver: bridge
+    build: ./question-gen
+    ports:
+      - "8004:8004"
