--- a/question-gen/requirements.txt
+++ b/question-gen/requirements.txt
@@ -2,11 +2,8 @@ fastapi
 uvicorn
 transformers
 torch
-fastapi
-uvicorn
-transformers
-torch
-fastapi
-uvicorn
-transformers
-torch
+protobuf>=3.20.0
+tiktoken
+sentencepieceprotobuf>=3.20.0
+tiktoken
+sentencepiece
